# os-sockets_parallel

./: .gitignore  CMakeLists.txt  README.md  commands.md  main.c
client/: client.c
server/: server.c
state-variable/: state-variable.c
